@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods


class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class GreenSpace {
   name
   address
   area
   type
}

class Entry {
  taskTitle
  taskDescription
  urgencyLevel
  state
  duration
}

class GreenSpaceManager {
    name
    email
    phone
}

class Agenda{

}



class Team{
    teamMembers
    teamSkills
}



Organization "1" --- "1" GreenSpaceManager : has >
Entry "1" --"*" GreenSpace: associated >
GreenSpaceManager "1" -- "*" GreenSpace : manages >
Agenda "1" --  Entry : contains some >
Team "1" - "*" Entry: assign >
Team"1"-- Agenda
@enduml